--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/three": "^0.159.0",
+    "lil-gui": "^0.19.1",
     "load-script": "^2.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
